Project came to  the fore (basics animation)

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="fr">
 
     <head>
-        <link href="logo/Reservia@3x.png" rel="shortcut icon" >
+        <link href="logo/Reservia@3x.png" rel="shortcut icon" type="text/css" >
         <script src="https://kit.fontawesome.com/0da4233e0b.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="style.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,700;0,800;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <link type="text/css" rel="stylesheet" href="style.css">
+        <link type="text/css" rel="preconnect" href="https://fonts.gstatic.com">
+        <link type="text/css" href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Reservia</title>
@@ -27,8 +27,10 @@
                     <p>En plein centre ville ou en pleine nature</p>
                 </div>
                 <form class="searchbar" method="POST" action="traitement.php">
-                    <span class="fa-map">  <i class="fas fa-map-marker-alt"></i></span>
-                        <input type="search" name="what city" maxlength="30" placeholder="Marseille, France" autofocus/>
+                    <div class="focus">
+                        <span class="fa-map">  <i class="fas fa-map-marker-alt"></i></span>
+                        <input id="fields" type="search" name="what city" maxlength="30" placeholder="Marseille, France" />
+                    </div>
                     <button class="push" value="search">
                         <span class="fa-search"><i class="fas fa-search"></i></span>
                         <span class="click_search">Rechercher</span>
@@ -75,25 +77,25 @@
                 </div>
                 <div class="information">
                     <button class="info-circle">
-                        <span class="logo_circle">
+                        <span class="logo_circle circle">
                             <i class="fas fa-info"></i>
                         </span>
-                        <span class="info">
+                        <span class="info circle">
                             Plus de 500 logements sont disponibles dans cette ville
                         </span>
                     </button>
                 </div>
             </nav>
             <section class="main">
-                <h2 class="section_title">invisible_title</h2>
+                <h2 class="section_title">housing</h2>
                 <aside>
                     <h2 class="popular_title">Les plus populaires<i class="fas fa-chart-line"></i></h2>
                     <div class="popular_article"> 
                         <div class="popular_housing">
                             <a class="card" href="hebergements/1_xlarge/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
-                                    <picture class= "popular_picture">
-                                        <img src="hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="">
-                                    </picture>
+                                    <div class= "popular_picture">
+                                        <img src="hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Photo of a hotel room in 'Le Soleil du matin' with double bed for couples --- Overnight from 128 euros --- Opinion: 5 stars">
+                                    </div>
                                     <div class="popular_description">
                                         <div class="fa_description">
                                             <h3>Hôtel Le soleil du matin</h3>
@@ -115,7 +117,7 @@
                         <div class="popular_housing">
                             <a class="card" href="hebergements/1_xlarge/aw-creative-VGs8z60yT2c-unsplash.jpg">
                                     <picture class= "popular_picture">
-                                        <img src="hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="">
+                                        <img src="hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Photo of duplex in guests rooms 'Au coeur de l'eau' with double bed for couples --- Overnight from 73 euros --- Opinion: 4 stars">
                                     </picture>
                                     <div class="popular_description">
                                         <div class="fa_description">
@@ -139,8 +141,7 @@
                         <div class="popular_housing">
                             <a class="card" href="hebergements/1_xlarge/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
                                     <picture class= "popular_picture">
-                                        <img
-                                            src="hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="">
+                                        <img src="hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Photo of a hotel room in 'Tout bleu et Blanc' with double bed for couples --- Overnight from 68 euros --- Opinion: 4 stars">
                                     </picture>
                                     <div class="popular_description">
                                         <div class="fa_description">
@@ -168,7 +169,7 @@
                         <div class="serie">
                                 <a class="accomodation" href="hebergements/1_xlarge/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
                                         <picture class= "accomodation_picture">
-                                            <img src="hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="auberge"/>
+                                            <img src="hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Photo of a hostel room in inn 'La Canebière' with a set of two superimposed beds --- Overnight from 25 euros --- Opinion: 4 stars --- District 1"/>
                                         </picture>
                                         <div class="accomodation_description">
                                             <h3>Auberge la Canebière</h3>
@@ -188,7 +189,7 @@
                                 </a>
                                 <a class="accomodation" href="hebergements/1_xlarge/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
                                         <picture class= "accomodation_picture">
-                                            <img src="hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="auberge"/>
+                                            <img src="hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Photo of a hotel room of hotel port with two simple bed --- Overnight from 52 euros --- Opinion: 5 stars --- District 1"/>
                                         </picture>
                                         <div class= "accomodation_description">
                                             <h3>Hôtel du port</h3>
@@ -206,7 +207,7 @@
                                 </a>
                                 <a class="accomodation" href="hebergements/1_xlarge/reisetopia-B8WIgxA_PFU-unsplash.jpg">
                                         <picture class= "accomodation_picture">
-                                            <img src="hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="auberge" />
+                                            <img src="hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Photo of a hotel room in 'Les mouettes' with one simple bed --- Overnight from 76 euros --- Opinion: 4 stars" />
                                         </picture>
                                         <div class="accomodation_description">
                                             <h3>Hôtel Les mouettes</h3>
@@ -228,7 +229,7 @@
                         <div class="serie">
                                 <a class="accomodation" href="hebergements/1_xlarge/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
                                         <figure class="accomodation_picture">
-                                            <img src="hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="auberge" />
+                                            <img src="hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Photo of a hotel room in 'hotel of the sea' with double bed for couples --- Overnight from 46 euros --- Opinion: 3 stars --- District 8" />
                                         </figure>
                                         <div class="accomodation_description">
                                             <h3>Hôtel de la mer</h3>
@@ -248,7 +249,7 @@
                                     </a>
                                 <a class="accomodation" href="hebergements/1_xlarge/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
                                         <figure  class="accomodation_picture">
-                                            <img src="hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="auberge" />
+                                            <img src="hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Photo of a inn room in 'Inn Le Panier' with two set of two superimposed beds (total four beds) --- Overnight from 23 euros --- Opinion: 4 stars --- District 2" />
                                         </figure>
                                         <div class="accomodation_description">    
                                             <h3>Auberge Le Panier</h3>
@@ -268,7 +269,7 @@
                                 </a>  
                                 <a class="accomodation" href="hebergements/1_xlarge/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
                                         <figure class= "accomodation_picture">
-                                            <img src="hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="auberge" />
+                                            <img src="hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Photo of a hotel room in 'Chez Amina' with two simple bed --- Overnight from 96 euros --- Opinion: 5 stars" />
                                         </figure>
                                         <div class= "accomodation_description">
                                             <h3>Hôtel chez Amina</h3>
@@ -294,10 +295,10 @@
                 </div>
                 <div class="activities_section">
                     <div class="activities vieux_port">
-                        <a href="activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
+                        <a href="activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Historic site: 'Vieux-port of Marseille' --- District 1">
                             <div class="big">
                                 <picture>
-                                    <img src="activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux_port">
+                                    <img src="activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Historic site: 'Vieux-port of Marseille' --- District 1">
                                 </picture>
                             </div>
                             <div class="activities_title">
@@ -306,66 +307,66 @@
                         </a>
                     </div>
                     <div class="activities pomegues">
-                    <a href="activites/1_xlarge/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
-                        <div class="activities_picture">
-                            <picture>
-                                <img src="activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort_Pomègues">
-                            </picture>
-                        </div>
-                        <div class="activities_title">
-                            <h3>Fort de Pomègues</h3>
-                        </div>
-                    </a>
+                        <a href="activites/1_xlarge/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Historic site: 'Fort de Pomègues' --- District 7">
+                            <div class="activities_picture">
+                                <picture>
+                                    <img src="activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Historic site: 'Fort de Pomègues' --- District 7">
+                                </picture>
+                            </div>
+                            <div class="activities_title">
+                                <h3>Fort de Pomègues</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="activities frioul">
+                        <a href="activites/1_xlarge/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Historic site: 'Îles du Frioul' --- District 7">
+                            <div class="activities_picture">
+                                <picture>
+                                    <img src="activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Historic site: 'Îles du Frioul' --- District 7">
+                                </picture>
+                            </div>
+                            <div class="activities_title">
+                                <h3>Îles du Frioul</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="activities calanques">
+                        <a href="activites/1_xlarge/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Historic site: 'National park of Calanques' --- District 9">
+                            <div class="big">
+                                <picture class="big">
+                                    <img src="activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Historic site: 'National park of Calanques' --- District 9">
+                                </picture>
+                            </div>
+                            <div class="activities_title">
+                                <h3>Parc National des Calanques</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="activities notre_dame">
+                        <a href="activites/1_xlarge/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Historic site: 'Nôtre-Dame-de-la-Garde' --- District 6">
+                            <div class="activities_picture">
+                                <picture>
+                                    <img src="activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Historic site: 'Nôtre-Dame-de-la-Garde' --- District 6">
+                                </picture>
+                            </div>
+                            <div class="activities_title">
+                                <h3>Notre-Dame-de-la-Garde</h3>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="activities  longchamp">
+                        <a href="activites/1_xlarge/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Historic site: 'Longchamp palace' --- District 4">
+                            <div class="activities_picture">
+                                <picture>
+                                    <img src="activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Historic site: 'Longchamp palace' --- District 4">
+                                </picture>
+                            </div>
+                            <div class="activities_title">
+                                <h3>Longchamp</h3>
+                            </div>
+                        </a>
+                    </div>
                 </div>
-                <div class="activities frioul">
-                    <a href="activites/1_xlarge/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg">
-                        <div class="activities_picture">
-                            <picture>
-                                <img src="activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
-                            </picture>
-                        </div>
-                        <div class="activities_title">
-                            <h3>Îles du Frioul</h3>
-                        </div>
-                    </a>
-                </div>
-                <div class="activities calanques">
-                    <a href="activites/1_xlarge/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
-                        <div class="big">
-                            <picture class="big">
-                                <img src="activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques">
-                            </picture>
-                        </div>
-                        <div class="activities_title">
-                            <h3>Parc National des Calanques</h3>
-                        </div>
-                    </a>
-                </div>
-                <div class="activities notre_dame">
-                    <a href="activites/1_xlarge/florian-wehde-xW9e8gdotxI-unsplash.jpg">
-                        <div class="activities_picture">
-                            <picture>
-                                <img src="activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
-                            </picture>
-                        </div>
-                        <div class="activities_title">
-                            <h3>Notre-Dame-de-la-Garde</h3>
-                        </div>
-                    </a>
-                </div>
-                <div class="activities  longchamp">
-                    <a href="activites/1_xlarge/lena-paulin-wH2-EJoDcV0-unsplash.jpg">
-                        <div class="activities_picture">
-                            <picture>
-                                <img src="activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc_Longchamp">
-                            </picture>
-                        </div>
-                        <div class="activities_title">
-                            <h3>Longchamp</h3>
-                        </div>
-                    </a>
-                </div>
-            </div>
             </section>
             <footer>
                 <div class="footer_bar condition">
